--- a/doc/biblio.bib
+++ b/doc/biblio.bib
@@ -88,7 +88,7 @@
 }
 
 
-	
+
 
 @inproceedings{ACE14,
 	author = {Andr{\'e}, {\'E}tienne and Coti, Camille and Evangelista, Sami},
@@ -277,7 +277,7 @@
 	numpages = {10},
 	publisher = {ACM},
 	address = {New York, NY, USA},
-} 
+}
 
 
 @inproceedings{AHW18,
@@ -566,6 +566,30 @@
   	title =	{Updatable Timed Automata},
   	volume =	{321},
   	year =	{2004},
+}
+
+@inproceedings{BDHHJT17,
+	author    = {Budde, Carlos E. and
+	Dehnert, Christian and
+	Hahn, Ernst Moritz and
+	Hartmanns, Arnd and
+	Junges, Sebastian and
+	Turrini, Andrea},
+	editor    = {Axel Legay and
+	Tiziana Margaria},
+	title     = {{JANI}: Quantitative Model and Tool Interaction},
+	longbooktitle = {Proceedings of the 23rd International Conference on Tools and Algorithms for the Construction and Analysis of Systems ({TACAS} 2017), Part {II}, Held as Part of the European Joint Conferences on Theory and Practice of Software ({ETAPS} 2017)},
+	booktitle = {{TACAS}},
+	eventdate = {2017-04-22/2017-04-29},
+	location  = {Uppsala, Sweden},
+	series    = {\LNCS{}},
+	volume    = {10206},
+	pages     = {151--168},
+	year      = {2017},
+	doi       = {10.1007/978-3-662-54580-5_9},
+	timestamp = {Fri, 27 Dec 2019 21:24:41 +0100},
+	biburl    = {https://dblp.org/rec/conf/tacas/BuddeDHHJT17.bib},
+	bibsource = {dblp computer science bibliography, https://dblp.org}
 }
 
 
