--- a/doc/commons.tex
+++ b/doc/commons.tex
@@ -260,6 +260,7 @@
 % \newcommand{\prism}{\textsc{Prism}}
 % \newcommand{\red}{RED}
 \newcommand{\uppaal}{\textsc{Uppaal}}
+\newcommand{\jani}{\textsc{The Jani Specification}}
 
 \newcommand{\binimitator}{./imitator}
 
@@ -340,11 +341,11 @@
 	\fbox{
 		\begin{minipage}{0.95\textwidth}
 		\textbf{#1}
-		
+
 		#2
 		\end{minipage}
 	}
-	
+
 	\medskip
 }
 
@@ -354,11 +355,11 @@
 % 	\fcolorbox{red!50!black}{red!20}{
 % 		\begin{minipage}{0.95\textwidth}
 % 		\textbf{Warning: #1}
-% 		
+%
 % 		#2
 % 		\end{minipage}
 % 	}
-% 	
+%
 % 	\medskip
 % }
 
@@ -387,26 +388,26 @@
 
 \newcommand{\styleCommand}[1]{
 	\medskip
-	
+
 	% \mbox{}\hspace{.5cm}
 	\noindent\fcolorbox{white}{black!90}{
 		\textcolor{yellow!30}{\$\ \ \texttt{#1}}
 	}
-	
+
 	\medskip
 
 }
 
 \newcommand{\styleTerminalOutput}[1]{
 	\medskip
-	
+
 	% \mbox{}\hspace{.5cm}
 	\noindent\fcolorbox{white}{black!90}{
 	\begin{minipage}{.97\textwidth}
 		\textcolor{yellow!30}{\texttt{#1}}
 	\end{minipage}
 	}
-	
+
 	\medskip
 
 }
