Prepare version number to 3.1

--- a/doc/commons.tex
+++ b/doc/commons.tex
@@ -266,8 +266,8 @@
 
 
 % Current version
-\newcommand{\imitatorversion}{3}
-\newcommand{\imitatorversionname}{Cheese}
+\newcommand{\imitatorversion}{3.1}
+\newcommand{\imitatorversionname}{Cheese artichoke}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
