Graphics for v3.1 Cheese artichoke

--- a/doc/graphics-credits.tex
+++ b/doc/graphics-credits.tex
@@ -6,7 +6,8 @@
 \newcommand{\cczero}{\href{https://creativecommons.org/publicdomain/zero/1.0/}{\includegraphics[width=.15\textwidth]{cc-zero.png}}}
 \newcommand{\publicdomain}{\includegraphics[width=.15\textwidth]{publicdomain.png}}
 
-\begin{tabular}{| l | l | p{3.5cm} | p{3cm} | l |}
+\begin{longtable}{| l | l | p{3.5cm} | p{3cm} | l |}
+% \begin{tabular}{| l | l | p{3.5cm} | p{3cm} | l |}
 	\hline
 	\textbf{Version} & \textbf{Image} & \textbf{Source} & \textbf{Author} & \textbf{License}
 	%------------------------------------------------------------
@@ -36,55 +37,16 @@
 	version 2.12 & \includegraphics[width=.15\textwidth]{logo2-12-300.png} & \href{https://publicdomainpictures.net/en/view-image.php?image=39798&picture=lobster}{Photo of a live lobster} & Junior Libby & \cczero{}
 	%------------------------------------------------------------
 	\\\hline
-	version 3 & \includegraphics[width=.15\textwidth]{logo-3-300.png} & \href{https://commons.wikimedia.org/wiki/File:Banon2.jpg}{French goat's cheese Banon cut to show the inside of the cheese} & Tangopaso & \publicdomain{}
+	version 3.0 & \includegraphics[width=.15\textwidth]{logo-3-0-300.png} & \href{https://commons.wikimedia.org/wiki/File:Banon2.jpg}{French goat's cheese Banon cut to show the inside of the cheese} & Tangopaso & \publicdomain{}
 	%------------------------------------------------------------
 	\\\hline
-\end{tabular}
+	3.x versions & \includegraphics[width=.15\textwidth]{logo-3-300.png} & \href{https://openclipart.org/detail/308414/swiss-cheese-vacherin-swiss-food}{Swiss cheese vacherin} & swissboy & \publicdomain{}
+	%------------------------------------------------------------
+	\\\hline
+	version 3.1 & \includegraphics[width=.15\textwidth]{logo-3-1-300.png} & \href{https://openclipart.org/detail/291385/artichoke}{artichoke} & cactus cowboy & \publicdomain{}
+	%------------------------------------------------------------
+	\\\hline
+\end{longtable}
 
 % NOTE: logos can be downloaded at https://creativecommons.org/about/downloads/
 
-
-% \paragraph{\imitator{}'s logo} comes from \stylePath{Typing monkey.svg} by KaterBegemot on Wikimedia Commons
-% 	(License: Creative Commons Attribution-Share Alike 3.0 Unported).
-% 
-% \url{https://commons.wikimedia.org/wiki/File:Typing_monkey.svg}
-% 
-% 
-% \paragraph{\imitator{}'s 2.x version logo} comes from \stylePath{Stick\_of\_butter.jpg} by Renee Comet on Wikimedia Commons
-% 	(License: public domain).
-% 
-% \url{https://commons.wikimedia.org/wiki/File:Stick_of_butter.jpg}
-% 
-% \paragraph{\imitator{}'s 2.7 version logo} comes from \stylePath{Andouille-Scheiben.jpg} by Pwagenblast on Wikimedia Commons
-% 	(License: Creative Commons Attribution 3.0 Unported).
-% The background erasing was done by Fabrice~Kordon.
-% 
-% \url{https://commons.wikimedia.org/wiki/File:Andouille-Scheiben.jpg}
-% 
-% 
-% \paragraph{\imitator{}'s 2.8 version logo} comes from \stylePath{Schinken-roh.jpg} by Rainer Zenz on Wikimedia Commons
-% 	(License: Creative Commons Attribution-Share Alike 3.0 Unported).
-% 
-% \url{https://commons.wikimedia.org/wiki/File:Schinken-roh.jpg}
-% 
-% 
-% \paragraph{\imitator{}'s 2.9 version logo} comes from \stylePath{Physalis peruviana.jpg} by Hans B.~commonswiki (assumed?) on Wikimedia Commons
-% 	(License: public domain).
-% 
-% \url{https://commons.wikimedia.org/wiki/File:Physalis_peruviana.jpg}
-%  
-% 
-% \paragraph{\imitator{}'s 2.10 version logo} comes from ``méduses tentacules'' by (?) on \url{pixabay.com}
-% 	(License: CC0).
-% 
-% \url{https://pixabay.com/fr/m%C3%A9duse-tentacules-medusa-marine-154799/}
-% 
-% \paragraph{\imitator{}'s 2.11 version logo} comes from ``Véritable Kouign Amann de Douarnenez'' by Haltopub on Wikimedia Commons
-% 	(License: public domain).
-% 
-% \url{https://commons.wikimedia.org/wiki/File:Kouignamann.JPG}
-%  
-% \paragraph{\imitator{}'s 2.12 version logo} comes from ``Photo of a live lobster'' by Junior Libby on PublicDomainPictures.net
-% 	(License: CC0 - public domain).
-% 
-% \url{https://publicdomainpictures.net/en/view-image.php?image=39798&picture=lobster}
