--- a/doc/title_and_toc.tex
+++ b/doc/title_and_toc.tex
@@ -20,14 +20,12 @@
 	\medskip
 	
 	\includegraphics[height=0.15\textwidth]{../logos/logo-3-300.png}
-% 	
-% 	\includegraphics[height=0.15\textwidth]{../logos/logo2-12-300.png}
+	\hspace{2em}
+	\includegraphics[height=0.15\textwidth]{../logos/logo-3-1-300.png}
 
 \end{center}
 
 \vspace{1.5cm}
-
-% {\small \hfill{}Build \input{../build_number.txt}}
 
 {\small \hfill{}\today{}}
 
@@ -51,7 +49,3 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 
 \newpage
-
-% \pagestyle{fancyplain}
-% \lhead{\fancyplain{}{\imitator{} \imitatorversion{} User Manual}}
- 
