--- a/doc/commons.tex
+++ b/doc/commons.tex
@@ -72,7 +72,7 @@
 \fancyhead[r]{%
 	\includegraphics[height=1em]{../logos/imitator-500.png}
 	\includegraphics[height=1em]{../logos/logo-3-300.png}
-% 	\includegraphics[height=1em]{../logos/logo-2-12-300.png}
+	\includegraphics[height=1em]{../logos/logo-3-1-300.png}
 }
 
 \renewcommand{\headrulewidth}{.1pt}
