Add Dylan and Benjamin to contributors

--- a/doc/IMITATOR-user-manual.tex
+++ b/doc/IMITATOR-user-manual.tex
@@ -3671,6 +3671,8 @@ The following people contributed to the development of \imitator{}.
 	Daphne Dussaud       & 2010 &    &      \\
 	Sami Evangelista     & 2014 &    &      \\
 	Ulrich Kühne         & 2010 & -- & 2011 \\
+	Benjamin Loillier    & 2021 & -- &      \\
+	Dylan Marinho        & 2021 & -- &      \\
 	Nguy\~{ê}n~Hoàng~Gia & 2014 & -- & 2018 \\
 	Laure Petrucci       & 2019 & -- &      \\
 	Jaco Van de Pol      & 2019 & -- &      \\
