Prepare doc for 3.1

--- a/doc/commons.tex
+++ b/doc/commons.tex
@@ -267,7 +267,7 @@
 
 % Current version
 \newcommand{\imitatorversion}{3.1}
-\newcommand{\imitatorversionname}{Cheese artichoke}
+\newcommand{\imitatorversionname}{Cheese Artichoke}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
